# fundmyproject-web3

./: .deployment-testnet.json  .env.example  .gitignore  README.md
contracts/: Cargo.toml
contracts/edufundx_core/: Cargo.toml
contracts/edufundx_core/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/edufundx_core/test_snapshots/test/: test_create_project.1.json  test_get_projects_by_owner.1.json  test_initialize.1.json  test_update_project.1.json  test_update_project_status_authorization.1.json
contracts/edufundx_escrow/: Cargo.toml
contracts/edufundx_escrow/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/edufundx_escrow/test_snapshots/test/: test_initialize.1.json  test_refund_on_cancellation.1.json  test_release_milestone_funds.1.json  test_sponsor_project.1.json
contracts/edufundx_milestone/: Cargo.toml
contracts/edufundx_milestone/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/edufundx_milestone/test_snapshots/test/: test_milestone_flow_end_to_end.1.json
contracts/edufundx_reputation/: Cargo.toml
contracts/edufundx_reputation/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/edufundx_reputation/test_snapshots/test/: test_cannot_initialize_twice.1.json  test_default_reputation_is_zero.1.json  test_only_core_can_mutate.1.json  test_project_completion_bonus.1.json  test_record_contribution_updates_score.1.json
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
scripts/: deploy-local.sh  deploy-testnet.ps1  (+4 more)
(+49 files in other folders)
