[workspace]
resolver = "2"
members = [
    "edufundx_core",
    "edufundx_reputation",
    "edufundx_escrow",
    "edufundx_milestone",
]

[workspace.dependencies]
soroban-sdk = "26"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
strip = "symbols"
debug = 0